--- a/hello-cloud-service.properties
+++ b/hello-cloud-service.properties
@@ -1,1 +1,8 @@
+#this is the port on which our hello-cloud-service will run
+server.port=7979
+
+#allow for RefreshScope
+management.endpoints.web.exposure.include=*
+
+#the hello-cloud-service will use this as a greeting that it serves up
 officialGreeting = "This is the new greeting!!"
