--- a/Ovie-Omene-random-quote-service.properties
+++ b/Ovie-Omene-random-quote-service.properties
@@ -3,7 +3,7 @@ server.port=2244
 #allow for RefreshScope
 management.endpoints.web.exposure.include=*
 
-
+#rand comment
 quoteList=[{"quote": "To me programming is more than an important practical art. It is also a gigantic undertaking in the foundations of knowledge. - Grace Hopper"},
 {"quote": "Programs must be written for people to read, and only incidentally for machines to execute. - Hal Ableson"},
 {"quote": "Don't call me the mother of the internet. - Radia Perlman"},
