--- a/Ovie-Omene-random-quote-service.properties
+++ b/Ovie-Omene-random-quote-service.properties
@@ -3,6 +3,8 @@ server.port=2244
 #allow for RefreshScope
 management.endpoints.web.exposure.include=*
 
+
+
 #rand comment
 quoteList=[{"quote": "To me programming is more than an important practical art. It is also a gigantic undertaking in the foundations of knowledge. - Grace Hopper"},
 {"quote": "Programs must be written for people to read, and only incidentally for machines to execute. - Hal Ableson"},
@@ -12,3 +14,8 @@ quoteList=[{"quote": "To me programming is more than an important practical art.
 {"quote": "The function of good software is to make the complex appear simple. - Grady Booch"},
 {"quote": "An API that isn't comprehensible isn't usable. - James Gosling"},
 {"quote": "I'm not a great programmer; I'm just a good programmer with great habits. - Martin Fowler"}]
+
+
+magicEightBallService=magic-eight-ball-service
+serviceProtocol=http://
+servicePath=/greeting
