--- a/Ovie-Omene-random-quote-service.properties
+++ b/Ovie-Omene-random-quote-service.properties
@@ -18,4 +18,4 @@ quoteList=[{"quote": "To me programming is more than an important practical art.
 
 magicEightBallService=magic-eight-ball-service
 serviceProtocol=http://
-servicePath=/greeting
+servicePath=/answerme
